syntax = "proto3";

package yourdailyword;

option java_multiple_files = true;
option java_package = "com.minkyu.yourdailyword.common.protos";
option java_outer_classname = "QuoteHebrewCalendarOptionsProto";

message QuoteHebrewCalendarOptions {
    bool skipOnShortYear = 1;
    bool skipOnShortMonth = 2;
    bool setting3 = 3;
}
